<resources>
    <string name="app_name">嘉E贷</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="launch_gesture">手势密码</string>
    <string name="home_price">快审通道</string>
    <string name="home_credit">消费分期</string>
    <string name="home_loan">金融超市</string>
    <string name="wish_item1">家电</string>
    <string name="wish_item2">手机</string>
    <string name="wish_item3">电脑</string>
    <string name="wish_item4">手表配饰</string>
    <string name="wish_item5">运动服饰</string>
    <string name="wish_item6">美妆</string>
    <string name="wish_item7">箱包珠宝</string>
    <string name="wish_item8">数码</string>
    <string name="wish_item9">其他</string>
    <string name="wish_item10">二手优选</string>
    <string name="wish_list">心愿清单</string>
    <string name="wish_edit1">请输入您心意的品牌</string>
    <string name="wish_edit2">请输入产品型号</string>
    <string name="wish_edit3">请输入市场参考价</string>
    <string name="wish_edit4">请输入您想要借款金额</string>
    <string name="wish_warn">*请填写准确的信息，用于额度的审批</string>
    <string name="wish_commit">提交申请</string>
    <string name="loan_auth_title">申请材料</string>
    <string name="loan_auth_ocr">身份认证</string>
    <string name="loan_auth_name">姓名</string>
    <string name="loan_auth_ocr_number">身份证号</string>
    <string name="loan_auth_ocr_validity_date">有效期限</string>
    <string name="loan_auth_ocr_front">身份证正面扫描上传</string>
    <string name="loan_auth_ocr_back">身份证反面扫描上传</string>
    <string name="loan_auth_ocr_prompt">温馨提示：扫描时请保证光线充足，扫描无阴影</string>
    <string name="loan_auth_ocr_check">校验身份信息</string>
    <string name="commit">提交</string>
    <string name="loan_auth_visa">电子签章授权</string>
    <string name="loan_auth_visa_history">历史签章授权</string>
    <string name="loan_auth_visa_confirm">确认电子签章授权</string>
    <string name="loan_auth_face">人像比对</string>
    <string name="loan_auth_face_fail">活体检测失败</string>
    <string name="loan_auth_info">个人资料</string>
    <string name="loan_auth_person_info">个人信息</string>
    <string name="loan_auth_person_education">最高学历</string>
    <string name="loan_auth_person_marriage">婚姻状况</string>
    <string name="loan_auth_person_register_city">户籍所在城市</string>
    <string name="loan_auth_person_city">现居住城市</string>
    <string name="loan_auth_person_address">现居住地址</string>
    <string name="loan_auth_person_email">电子邮箱</string>
    <string name="loan_auth_contact_info">联系人信息</string>
    <string name="loan_auth_contact_family">直系亲属</string>
    <string name="loan_auth_contact_friend">亲属/朋友</string>
    <string name="loan_auth_contact_phone">手机号码</string>
    <string name="loan_auth_submit">已提交</string>
    <string name="loan_auth_un_submit">未提交</string>
    <string name="loan_auth_phone">手机运营商</string>
    <string name="loan_auth_phone_phone">您的手机号：%1$s</string>
    <string name="loan_auth_phone_operators">所属运营商：%1$s</string>
    <string name="loan_auth_phone_input_password">请输入服务密码</string>
    <string name="loan_auth_phone_forget_password">忘记服务密码？</string>
    <string name="loan_auth_phone_input_sms_verification">请输入短信验证码</string>
    <string name="loan_auth_phone_input_img_verification">请输入图片验证码</string>
    <string name="loan_auth_phone_bank">银行高级别加密 保障您的信息安全</string>
    <string name="loan_auth_taobao">淘宝认证</string>
    <string name="loan_auth_taobao_normal">帐号授权</string>
    <string name="loan_auth_taobao_normal_account">请输入淘宝账号</string>
    <string name="loan_auth_taobao_normal_input_password">请输入密码</string>
    <string name="loan_auth_taobao_normal_commit">立即授权</string>
    <string name="loan_auth_taobao_input_sms_verification">请输入短信验证码</string>
    <string name="loan_auth_taobao_input_img_verification">请输入图片验证码</string>
    <string name="loan_auth_taobao_qr">二维码授权</string>
    <string name="loan_auth_sesame">芝麻信用分</string>
    <string name="loan_auth_file">进件上传</string>
    <string name="loan_auth_file_count">%1$d张</string>
    <string name="loan_auth_file_camera">拍照</string>
    <string name="loan_auth_file_photo">相册</string>
    <string name="loan_details_approve_title">借款审批</string>
    <string name="loan_details_progress_title">放款还款</string>
    <string name="loan_details_history_title">历史借款</string>
    <string name="loan_details_id">申请编号：</string>
    <string name="loan_details_product">产品名</string>
    <string name="loan_details_approve">审批金额</string>
    <string name="loan_details_total">总还款额</string>
    <string name="loan_details_loan">借款金额</string>
    <string name="loan_details_other">综合费率</string>
    <string name="loan_details_deadline">本期还款日</string>
    <string name="loan_details_status">还款状态</string>
    <string name="loan_details_progress">查看借款进度</string>
    <string name="loan_details_plan">查看还款计划</string>
    <string name="loan_progress_title">借款进度</string>
    <string name="loan_progress_step">借款使用此步骤</string>
    <string name="loan_progress_progress">我的借款进度</string>
    <string name="loan_progress_phone">如有疑问请联系客服400–8780-777</string>
    <string name="loan_progress_bind">绑定</string>
    <string name="loan_progress_contract">签订</string>
    <string name="loan_progress_watch">查看</string>
    <string name="loan_progress_repayment">还款</string>
    <string name="loan_plan_title">还款计划</string>
    <string name="loan_plan_date">还款日</string>
    <string name="loan_plan_money">月还款额</string>
    <string name="loan_plan_state">还款状态</string>
    <string name="loan_contract_list">合同列表</string>
    <string name="loan_contract_list_id">申请编号：%1$s</string>
    <string name="loan_contract">借款合同</string>
    <string name="loan_bank_title">银行卡</string>
    <string name="loan_bank_person">持卡人</string>
    <string name="loan_bank_phone">预留手机号</string>
    <string name="loan_bank_phone_hint">输入银行预留手机号</string>
    <string name="loan_bank_bank">开户银行</string>
    <string name="loan_bank_bank_hint">输入开户银行</string>
    <string name="loan_bank_number">银行卡号</string>
    <string name="loan_bank_number_hint">输入储蓄卡号</string>
    <string name="loan_bank_support">支持银行</string>
    <string name="loan_bank_tips">新卡必须是本人名下储蓄卡</string>
    <string name="loan_support_id">序号</string>
    <string name="loan_support_bank">银行</string>
    <string name="loan_support_once">单笔限额</string>
    <string name="loan_support_day">单日限额</string>
    <string name="loan_support_month">单月限额</string>
    <string name="my_certificate">我的认证</string>
    <string name="my_certificate_basics">基本信息</string>
    <string name="my_certificate_head">头像</string>
    <string name="my_certificate_phone">手机号</string>
    <string name="my_certificate_bank">银行卡</string>
    <string name="my_certificate_certificate">认证信息</string>
    <string name="my_certificate_id_card">身份证</string>
    <string name="my_certificate_info">个人资料</string>
    <string name="my_certificate_operator">手机运营商</string>
    <string name="my_certificate_taobao">淘宝认证</string>
    <string name="my_certificate_sesame">芝麻信用分</string>
    <string name="my_tourist">游客</string>
    <string name="my_approve">借款审批</string>
    <string name="my_loan">放款还款</string>
    <string name="my_history">历史借款</string>
    <string name="my_credit">存管账户管理</string>
    <string name="my_credit_account">开户</string>
    <string name="my_credit_password">设置初始密码</string>
    <string name="my_credit_password_reset">重置密码</string>
    <string name="my_credit_cash">提现</string>
    <string name="my_credit_bank">银行卡</string>
    <string name="my_credit_manage_account">存管账户号</string>
    <string name="my_credit_copy">复制</string>
    <string name="my_credit_copy_success">复制成功</string>
    <string name="my_credit_bank_bind">添加银行卡</string>
    <string name="my_credit_bank_un_bind">解绑银行卡</string>
    <string name="my_credit_bank_name">持卡人：%1$s</string>
    <string name="my_credit_bank_number">卡号：%1$s</string>
    <string name="my_credit_bank_tip">提示：\n1、可用余额为0且无债权关系时可解绑银行卡 \n2、如有问题，请联系客服400–8780–777</string>
    <string name="my_credit_cash_title_1">江西银行\n存管账户</string>
    <string name="my_credit_cash_title_2">提现至</string>
    <string name="my_credit_cash_available">可用余额：</string>
    <string name="my_credit_cash_available_unit">%1$s元</string>
    <string name="my_credit_cash_cash">提现金额：</string>
    <string name="my_credit_cash_cash_hint">最低提现1元</string>
    <string name="my_credit_cash_bank">银行联行号：</string>
    <string name="my_credit_cash_bank_hint">请填写银行联行号</string>
    <string name="my_credit_cash_submit">确认提交</string>
    <string name="my_credit_cash_description_title">提现说明</string>
    <string name="my_credit_cash_description">1.快速提现单笔限额5万元，大额提现单笔限额50万元，每日最多可提现10次。\n\n2.提现手续费：1元/笔。\n\n3.提现时间：7×24小时。快速提现2小时左右到账，大额提现T+1工作日到账。节假日可能出现延迟。\n\n4.银行联行号：\n银行联行号就是一个地区银行的唯一识别标志。用于人民银行所组织的大额支付系统等跨区域支付结算业务，由12位组成。\n为了您的资金安全，提现金额大于5万需要填写银行联行号，联行号可以通过第三方网站或对应银行客服进行获取，银行联行号输入错误可能会导致提现失败，但不会影响资金安全。\n首次大额提现，系统会保存银行联行号，第二次大额提现，系统会自动为您填写银行联行号，不需要重新查询和输入(重新绑卡后需要重新输入)</string>
    <string name="my_credit_balance">余额</string>
    <string name="my_bank_bind_complete">绑定银行卡成功</string>
    <string name="my_bank_un_bind_complete">解绑成功</string>
    <string name="my_help">帮助中心</string>
    <string name="my_qrcode">关注公众号</string>
    <string name="my_qrcode_success">保存成功</string>
    <string name="my_about">关于我们</string>
    <string name="my_about_title">公司简介</string>
    <string name="my_about_text">嘉业（前身）成立于2003年，业务范围涵盖出借咨询管理、旅游、信用评估咨询、财富管理、物业、资产管理等领域。\n嘉业投资及嘉业财富注册资本各5000万元，是国内较早的集借款、出借信息管理,信用风险评估管理,信用数据整合与交易促成等业务于一体的专业性现代化互联网金融信息服务企业。公司秉承“嘉惠於民 业兴於信”的企业宗旨，以互联网金融信息服务为主导，凭借具有专业金融服务背景管理团队和风险管理思维，迅速成长为国内知名的专注专业化发展的互联网金融信息服务平台之一。\n嘉业服务网点遍布北京、上海、广州、苏州、南京、哈尔滨等全国50多个城市。嘉业现有专业领域员工近2500人，资深专业出借顾问五百余名，风险管理团队五百多人，利用互联网金融核心决策及大数据分析系统，为客户提供全方位、个性化的金融信息管理服务。\n嘉业致力于以专业的服务团队和良好的资源优势创造信用、传递信用、创新价值，帮助更多的人提升信用价值，帮助全民实现稳定、安全的财富增值，以真诚与专业回报客户。</string>
    <string name="my_contact">联系我们</string>
    <string name="my_contact_phone">400&#8211;8780&#8211;777</string>
    <string name="my_settings">个人设置</string>
    <string name="my_settings_gesture">手势密码</string>
    <string name="my_share">分享给朋友</string>
    <string name="my_wechat">微信好友</string>
    <string name="my_wechat_title">年轻人的互联网钱包</string>
    <string name="my_wechat_description">随时随地想借就借</string>
    <string name="my_moments">朋友圈</string>
    <string name="my_cancel">取消</string>
    <string name="login_title">登录</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_password">请输入密码（6&#8211;12位）</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="send_count_down">%s秒后重新发送</string>
    <string name="send_again">重新发送</string>
    <string name="register_now">马上注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_login">账号登录</string>
    <string name="register_title">注册</string>
    <string name="input_img_verification">请输入图片验证码</string>
    <string name="input_sms_verification">请输入手机验证码</string>
    <string name="input_referral">请输入推荐码（如有填写）</string>
    <string name="read_protocol">我已阅读并同意《授权委托书》</string>
    <string name="protocol">授权委托书</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="settings_password_title">修改密码</string>
    <string name="next">下一步</string>
    <string name="change_password_title">重置密码</string>
    <string name="input_new_password">请设置新密码（6&#8211;12位）</string>
    <string name="input_new_password_second">请确认新密码</string>
    <string name="save">保存</string>
    <string name="error_connect">网络连接不可用</string>
    <string name="error_http">网络请求失败</string>
    <string name="error_socket_timeout">网络请求超时</string>
    <string name="error_install_permission">请开启安装第三方应用的授权</string>
    <string name="error_auth_not_log_in">未登录</string>
    <string name="error_auth_phone">*请输入正确的手机号</string>
    <string name="error_auth_password">*请输入正确的密码</string>
    <string name="error_auth_img_verification">*请输入正确的验证码</string>
    <string name="error_auth_sms_verification">*请输入正确的验证码</string>
    <string name="error_auth_agree">请阅读并同意注册协议</string>
    <string name="error_auth_referral">*请输入正确的推荐码</string>
</resources>