<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="RtlSymmetry,RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/color_gray_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="#f2f2f2"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_credit_cash_title_1"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_credit_cash_title_2"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_credit_cash_available"
                android:textColor="@color/color_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_credit_cash_cash"
                android:textColor="@color/color_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/my_credit_cash_cash_hint"
                android:inputType="numberDecimal"
                android:textColor="@color/color_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_credit_cash_bank"
                android:textColor="@color/color_black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/my_credit_cash_bank_hint"
                android:inputType="number"
                android:textColor="@color/color_black"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/loan_btn"
            android:text="@string/my_credit_cash_submit"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/my_credit_cash_description_title"
            android:textColor="@color/color_black_light"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/my_credit_cash_description"
            android:textColor="@color/color_black_light"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>
