<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jiaye.cashloan.widget.LoanEditText
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:hint="@string/loan_auth_taobao_normal_account"
        app:icon="@drawable/auth_ic_phone"
        app:request_force="true" />

    <com.jiaye.cashloan.widget.LoanEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/loan_auth_taobao_normal_input_password"
        android:inputType="textPassword"
        app:icon="@drawable/auth_ic_password" />

    <com.jiaye.cashloan.widget.LoanEditText
        android:id="@+id/edit_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/loan_auth_taobao_input_sms_verification"
        android:inputType="number"
        android:maxLength="6"
        android:visibility="gone"
        app:enable_verification="true"
        app:icon="@drawable/loan_auth_phone_ic_sms_verification" />

    <com.jiaye.cashloan.widget.LoanEditText
        android:id="@+id/edit_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/loan_auth_taobao_input_img_verification"
        android:maxLength="6"
        android:visibility="gone"
        app:enable_verification="true"
        app:icon="@drawable/loan_auth_phone_ic_sms_verification"
        app:verification_type="2" />

    <Button
        android:id="@+id/btn_commit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/loan_btn"
        android:enabled="true"
        android:text="@string/loan_auth_taobao_normal_commit"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_treasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/login_ic_treasure" />
    </RelativeLayout>

</LinearLayout>