<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/text_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/ic_wechat"
            android:gravity="center"
            android:text="@string/my_wechat"
            android:textColor="@color/color_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_moments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/ic_moments"
            android:gravity="center"
            android:text="@string/my_moments"
            android:textColor="@color/color_black"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_gray" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/my_cancel"
        android:textColor="@color/color_black"
        android:textSize="14sp" />
</LinearLayout>